정지웅/발주관리그리드작성/25.09.30

--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@fullcalendar/vue3": "^6.1.15",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
+    "ag-grid-vue3": "^34.2.0",
     "apexcharts": "^4.4.0",
     "dropzone": "^6.0.0-beta.2",
     "flatpickr": "^4.6.13",
@@ -30,6 +31,7 @@
     "vue": "^3.5.13",
     "vue-flatpickr-component": "^11.0.5",
     "vue-good-table": "^2.21.11",
+    "vue-good-table-next": "^0.2.2",
     "vue-kanban": "^1.8.0",
     "vue-router": "^4.5.0",
     "vue3-apexcharts": "^1.8.0",
