--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@fullcalendar/list": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
     "@fullcalendar/vue3": "^6.1.15",
+    "@primeuix/themes": "^1.2.5",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
     "ag-grid-community": "^34.2.0",
@@ -28,6 +29,8 @@
     "flatpickr": "^4.6.13",
     "jsvectormap": "^1.6.0",
     "lucide-vue-next": "^0.474.0",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.3.9",
     "swiper": "^11.2.1",
     "vue": "^3.5.13",
     "vue-flatpickr-component": "^11.0.5",
