--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "ag-grid-community": "^34.2.0",
     "ag-grid-vue3": "^34.2.0",
     "apexcharts": "^4.4.0",
+    "axios": "^1.12.2",
     "dropzone": "^6.0.0-beta.2",
     "flatpickr": "^4.6.13",
     "jsvectormap": "^1.6.0",
