--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "flatpickr": "^4.6.13",
     "jsvectormap": "^1.6.0",
     "lucide-vue-next": "^0.474.0",
+    "moment": "^2.30.1",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.9",
     "swiper": "^11.2.1",
