--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "axios": "^1.12.2",
     "dropzone": "^6.0.0-beta.2",
     "flatpickr": "^4.6.13",
+    "html2pdf.js": "^0.12.1",
     "jsvectormap": "^1.6.0",
     "lucide-vue-next": "^0.474.0",
     "moment": "^2.30.1",
