--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "mariadb": "^3.4.5"
+    "mariadb": "^3.4.5",
+    "puppeteer": "^24.23.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
