--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "flatpickr": "^4.6.13",
     "html2pdf.js": "^0.12.1",
     "jsvectormap": "^1.6.0",
+    "lodash": "^4.17.21",
     "lucide-vue-next": "^0.474.0",
     "moment": "^2.30.1",
     "primeicons": "^7.0.0",
@@ -48,6 +49,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.0",
     "@tsconfig/node22": "^22.0.0",
+    "@types/lodash": "^4.17.20",
     "@types/node": "^22.10.7",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitejs/plugin-vue-jsx": "^4.1.1",
