--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "mariadb": "^3.4.5",
+    "multer": "^2.0.2",
     "puppeteer": "^24.23.0"
   },
   "devDependencies": {
