방재우/설비-비가동관리-등록/1014

--- a/client/package.json
+++ b/client/package.json
@@ -28,10 +28,12 @@
     "axios": "^1.12.2",
     "dropzone": "^6.0.0-beta.2",
     "flatpickr": "^4.6.13",
+    "icons": "^1.0.0",
     "jsvectormap": "^1.6.0",
     "lodash": "^4.17.21",
     "lucide-vue-next": "^0.474.0",
     "moment": "^2.30.1",
+    "prime": "^0.5.0",
     "primeicons": "^7.0.0",
     "primevue": "^4.4.0",
     "swiper": "^11.2.1",
