--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "lodash": "^4.17.21",
     "lucide-vue-next": "^0.474.0",
     "moment": "^2.30.1",
+    "pinia": "^3.0.3",
     "prime": "^0.5.0",
     "primeicons": "^7.0.0",
     "primevue": "^4.4.0",
