--- a/.github/workflows/TEAM3-MES-Makgeolli.yml
+++ b/.github/workflows/TEAM3-MES-Makgeolli.yml
@@ -31,7 +31,7 @@ jobs:
       working-directory: client
       run: |
         npm ci --no-audit --no-fund
-        npm run build
+        npm run build-only
         
     # github actions 에 저장된 private key를 ubuntu에 복사
     - name: Setup SSH key
