--- a/client/package.json
+++ b/client/package.json
@@ -43,6 +43,7 @@
     "vue-good-table": "^2.21.11",
     "vue-good-table-next": "^0.2.2",
     "vue-kanban": "^1.8.0",
+    "vue-number-format": "^1.3.1",
     "vue-router": "^4.5.0",
     "vue3-apexcharts": "^1.8.0",
     "vuedraggable": "^4.1.0",
